# py-hello-world

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  setup.py
hello_world/: __init__.py  __main__.py  __main__with_import.py  command_line_args.py  get_text.py  main.py  main_import.py  main_no_import.py  main_sub.py  version.py
hello_world/sub/: __init__.py  __main__sub.py  util.py
hello_world/util/: __init__.py  main_sub.py
